Add GA crossover

--- a/src/bionet.vcxproj
+++ b/src/bionet.vcxproj
@@ -114,7 +114,8 @@
     <ClInclude Include="behavior.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\Readme.txt" />
+    <None Include="..\LICENSE" />
+    <None Include="..\README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
