--- a/src/makefile
+++ b/src/makefile
@@ -2,13 +2,15 @@
 
 CC = gcc
 
-CCFLAGS = -O3 -c
-LINKLIBS = -lm -lstdc++
+CCFLAGS = -DTHREADS -O3 -c -std=c++11
+LINKLIBS = -lm -lpthread -lstdc++
 
 all: ../bin/bionet
 
-../bin/bionet: bionet.o network.o neuron.o behavior.o networkMorph.o random.o fileio.o gettime.o
-	$(CC) -o ../bin/bionet bionet.o network.o neuron.o behavior.o networkMorph.o random.o fileio.o gettime.o $(LINKLIBS)
+../bin/bionet: bionet.o network.o neuron.o behavior.o networkMorph.o networkHomomorph.o \
+networkIsomorph.o mutableParm.o random.o fileio.o gettime.o
+	$(CC) -o ../bin/bionet bionet.o network.o neuron.o behavior.o networkMorph.o \
+        networkHomomorph.o networkIsomorph.o mutableParm.o random.o fileio.o gettime.o $(LINKLIBS)
 
 bionet.o: bionet.cpp
 	$(CC) $(CCFLAGS) bionet.cpp
@@ -24,6 +26,15 @@ behavior.o: behavior.hpp behavior.cpp network.hpp
 
 networkMorph.o: networkMorph.hpp networkMorph.cpp network.hpp
 	$(CC) $(CCFLAGS) networkMorph.cpp
+
+networkHomomorph.o: networkHomomorph.hpp networkHomomorph.cpp networkMorph.hpp network.hpp
+	$(CC) $(CCFLAGS) networkHomomorph.cpp
+
+networkIsomorph.o: networkIsomorph.hpp networkIsomorph.cpp networkMorph.hpp network.hpp
+	$(CC) $(CCFLAGS) networkIsomorph.cpp
+
+mutableParm.o: mutableParm.hpp mutableParm.cpp
+	$(CC) $(CCFLAGS) mutableParm.cpp
 
 random.o: random.hpp random.cpp
 	$(CC) $(CCFLAGS) random.cpp
