--- a/CElegans/behavior/src/CElegansBehavior.vcxproj.filters
+++ b/CElegans/behavior/src/CElegansBehavior.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="CElegansBody.cpp" />
+    <ClCompile Include="CElegansBehavior.cpp" />
     <ClCompile Include="..\..\..\src\behavior.cpp">
       <Filter>network</Filter>
     </ClCompile>
