Framework for wrigglenet: see CElegans/Readme.txt

--- a/CElegans/behavior/src/CElegansBehavior.vcxproj.filters
+++ b/CElegans/behavior/src/CElegansBehavior.vcxproj.filters
@@ -65,4 +65,7 @@
       <Filter>resource</Filter>
     </Xml>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\Readme.txt" />
+  </ItemGroup>
 </Project>
