Add utility to initialize NEURON hoc file

--- a/CElegans/wrigglenet/src/makefile
+++ b/CElegans/wrigglenet/src/makefile
@@ -7,8 +7,16 @@ LINKLIBS = -lm -lpthread -lstdc++
 
 all: ../bin/wrigglenet
 
-../bin/wrigglenet: wrigglenet.o evolveWriggle.o wriggle.o networkHomomorph.o networkMorph.o network.o neuron.o behavior.o mutableParm.o random.o fileio.o gettime.o
-	$(CC) -o ../bin/wrigglenet wrigglenet.o evolveWriggle.o wriggle.o networkHomomorph.o networkMorph.o network.o neuron.o behavior.o mutableParm.o random.o fileio.o gettime.o $(LINKLIBS)
+../bin/wrigglenet: wrigglenet.o evolveWriggle.o wriggle.o \
+neuron.o network.o behavior.o networkMorph.o networkMorphoGenesis.o \
+networkHomomorph.o undulationNetworkHomomorph.o neuronSimNetworkHomomorph.o networkHomomorphoGenesis.o \
+neuronSim.o neuronHocDoc.o mutableParm.o random.o fileio.o gettime.o
+	$(CC) -o ../bin/wrigglenet wrigglenet.o evolveWriggle.o wriggle.o \
+        neuron.o network.o behavior.o \
+        networkMorph.o networkMorphoGenesis.o \
+        networkHomomorph.o undulationNetworkHomomorph.o neuronSimNetworkHomomorph.o networkHomomorphoGenesis.o \
+        neuronSim.o neuronHocDoc.o mutableParm.o \
+        random.o fileio.o gettime.o $(LINKLIBS)
 
 wrigglenet.o: wrigglenet.cpp
 	$(CC) $(CCFLAGS) wrigglenet.cpp
@@ -19,20 +27,38 @@ evolveWriggle.o: evolveWriggle.hpp evolveWriggle.cpp
 wriggle.o: wriggle.hpp wriggle.cpp
 	$(CC) $(CCFLAGS) wriggle.cpp
 
-networkHomomorph.o: ../../../src/networkHomomorph.hpp ../../../src/networkHomomorph.cpp
-	$(CC) $(CCFLAGS) ../../../src/networkHomomorph.cpp
-
-networkMorph.o: ../../../src/networkMorph.hpp ../../../src/networkMorph.cpp
-	$(CC) $(CCFLAGS) ../../../src/networkMorph.cpp
+neuron.o: ../../../src/neuron.hpp ../../../src/neuron.cpp
+	$(CC) $(CCFLAGS) ../../../src/neuron.cpp
 
 network.o: ../../../src/network.hpp ../../../src/network.cpp ../../../src/neuron.hpp
 	$(CC) $(CCFLAGS) ../../../src/network.cpp
 
-neuron.o: ../../../src/neuron.hpp ../../../src/neuron.cpp
-	$(CC) $(CCFLAGS) ../../../src/neuron.cpp
-
 behavior.o: ../../../src/behavior.hpp ../../../src/behavior.cpp ../../../src/network.hpp
 	$(CC) $(CCFLAGS) ../../../src/behavior.cpp
+
+networkMorph.o: ../../../src/networkMorph.hpp ../../../src/networkMorph.cpp ../../../src/network.hpp
+	$(CC) $(CCFLAGS) ../../../src/networkMorph.cpp
+
+networkHomomorph.o: ../../../src/networkHomomorph.hpp ../../../src/networkHomomorph.cpp ../../../src/networkMorph.hpp ../../../src/network.hpp
+	$(CC) $(CCFLAGS) ../../../src/networkHomomorph.cpp
+
+undulationNetworkHomomorph.o: ../../../src/undulationNetworkHomomorph.hpp ../../../src/undulationNetworkHomomorph.cpp ../../../src/networkHomomorph.hpp ../../../src/network.hpp
+	$(CC) $(CCFLAGS) ../../../src/undulationNetworkHomomorph.cpp
+
+neuronSimNetworkHomomorph.o: ../../../src/neuronSimNetworkHomomorph.hpp ../../../src/neuronSimNetworkHomomorph.cpp ../../../src/networkHomomorph.hpp ../../../src/network.hpp
+	$(CC) $(CCFLAGS) ../../../src/neuronSimNetworkHomomorph.cpp
+
+networkMorphoGenesis.o: ../../../src/networkMorphoGenesis.hpp ../../../src/networkMorphoGenesis.cpp
+	$(CC) $(CCFLAGS) ../../../src/networkMorphoGenesis.cpp
+
+networkHomomorphoGenesis.o: ../../../src/networkHomomorphoGenesis.hpp ../../../src/networkHomomorphoGenesis.cpp
+	$(CC) $(CCFLAGS) ../../../src/networkHomomorphoGenesis.cpp
+
+neuronHocDoc.o: ../../../src/neuronHocDoc.hpp ../../../src/neuronHocDoc.cpp
+	$(CC) $(CCFLAGS) ../../../src/neuronHocDoc.cpp
+
+neuronSim.o: ../../../src/neuronSim.hpp ../../../src/neuronSim.cpp
+	$(CC) $(CCFLAGS) ../../../src/neuronSim.cpp
 
 mutableParm.o: ../../../src/mutableParm.hpp ../../../src/mutableParm.cpp
 	$(CC) $(CCFLAGS) ../../../src/mutableParm.cpp
